<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="please_select_your_option">Please select your option</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="email_id">Email</string>
    <string name="More">More</string>
    <string name="patient">PATIENT</string>
    <string name="pharmacy">PHARMACY</string>
    <string name="order_status">ORDER STATUS</string>
    <string name="prescription">Prescription</string>
    <string name="form">Forms</string>
    <string name="strength">STRENGTH</string>
    <string name="direction">DIRECTION</string>
    <string name="dispense">DISPENSE</string>
    <string name="refill">REFILL</string>
    <string name="do_not_substitute">Do Not Substitute</string>
    <string name="label">Label</string>
    <string name="notification">Notification</string>
    <string name="send">send</string>
    <string name="Click_here_to_select_patient">Click here to select patient</string>
    <string name="patient_name">Patient Name</string>
    <string name="invite_by_email_info">A connection request will be sent if a matching email address is already registered on %s. Otherwise, the patient will get an email with a link to download the app.</string>
    <string name="invite">Invite</string>
    <string name="schedules">Schedules</string>
    <string name="choose_doctor">Choose Provider</string>
    <string name="choose_patient">Choose Patient</string>
    <string name="Click_here_to_select_doctor">Click here to select provider</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="upload">Upload</string>
    <string name="pending_invites">Pending Invites</string>
    <string name="filter">Filter</string>
    <string name="help">help</string>
    <string name="events">events</string>
    <string name="waiting_room">Waiting Room</string>
    <string name="lbl_add_patients">Add Patients</string>
    <string name="lbl_reason">Reason</string>
    <string name="lbl_service_date">Date of service</string>
    <string name="lbl_transaction_date_time"><![CDATA[Date & Time]]></string>
    <string name="lbl_patient">Patient</string>
    <string name="lbl_charge">Charge</string>
    <string name="lbl_status">Status</string>
    <string name="lbl_refund">Refund</string>
    <string name="lbl_receipt">Receipt</string>
    <string name="lbl_process_payment">Process Payment</string>
    <string name="lbl_provider">Provider</string>
</resources>