<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_pending_invites"
        android:icon="@drawable/ic_pending_invite"
        android:title="@string/pending_invites"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_help_outline"
        android:title="@string/help"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_event"
        android:icon="@drawable/ic_schedules"
        android:iconTint="@color/colorWhite"
        android:title="@string/events"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_schedules"
        android:icon="@drawable/ic_schedule_list"
        android:title="@string/schedules"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_notification"
        android:title="@string/notification"
        app:actionLayout="@layout/view_home_notification_icon"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_addPatients"
        android:title="@string/lbl_add_patients"
        app:actionLayout="@layout/view_home_add_patients"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_overflow"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="@string/More"
        android:visible="false"
        app:showAsAction="always" />
</menu>