<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">

        <item
            android:id="@+id/menu_wating_room"
            android:icon="@drawable/waiting_room_icon"
            android:title="@string/waiting_room"
            android:visible="false"/>

        <item
            android:id="@+id/menu_call"
            android:icon="@drawable/ic_call"
            android:title="@string/call" />
        <item
            android:id="@+id/menu_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/chat" />
        <item
            android:id="@+id/menu_schedules"
            android:icon="@drawable/ic_schedule"
            android:title="@string/schedules" />
        <item
            android:id="@+id/menu_upload"
            android:icon="@drawable/ic_document_upload"
            android:title="@string/upload"
            android:visible="false" />
    </group>

</menu>