<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="10dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <TableLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">

        <TableRow style="@style/TransactionListRow">

            <TextView
                style="@style/TransactionRowLbl"

                android:text="@string/lbl_transaction_date_time" />

            <TextView
                android:id="@+id/tvDate"
                style="@style/TransactionRowValue"
                android:text="21 Jan 2021 | 03:15 AM" />
        </TableRow>

        <TableRow
            style="@style/TransactionListRow"
            android:visibility="gone">

            <TextView
                style="@style/TransactionRowLbl"
                android:text="@string/lbl_service_date" />

            <TextView
                android:id="@+id/tvDateOfService"
                style="@style/TransactionRowValue"
                android:text="20 Jan 2021" />
        </TableRow>

        <TableRow
            android:id="@+id/patientRow"
            style="@style/TransactionListRow">

            <TextView
                style="@style/TransactionRowLbl"
                android:text="@string/lbl_patient" />

            <TextView
                android:id="@+id/tvPatient"
                style="@style/TransactionRowValue"
                android:text="Bella Tallyer" />
        </TableRow>

        <TableRow
            android:id="@+id/doctorRow"
            style="@style/TransactionListRow">

            <TextView
                style="@style/TransactionRowLbl"
                android:text="@string/lbl_provider" />

            <TextView
                android:id="@+id/tvDoctor"
                style="@style/TransactionRowValue"
                android:text="Bella Tallyer" />
        </TableRow>

        <TableRow style="@style/TransactionListRow">

            <TextView
                style="@style/TransactionRowLbl"
                android:text="@string/lbl_type_of_charge" />

            <TextView
                android:id="@+id/tvChargeType"
                style="@style/TransactionRowValue"
                android:text="Co-Pay" />
        </TableRow>

        <TableRow style="@style/TransactionListRow">

            <TextView
                style="@style/TransactionRowLbl"
                android:text="@string/lbl_reason" />

            <TextView
                android:id="@+id/tvReason"
                style="@style/TransactionRowValue"
                android:text="Medicine" />
        </TableRow>

        <TableRow style="@style/TransactionListRow">

            <TextView
                style="@style/TransactionRowLbl"
                android:text="@string/lbl_charge" />

            <TextView
                android:id="@+id/tvCharge"
                style="@style/TransactionRowValue"
                android:text=" $28.00" />
        </TableRow>

        <TableRow style="@style/TransactionListRow">

            <TextView
                style="@style/TransactionRowLbl"
                android:text="@string/lbl_status" />

            <TextView
                android:id="@+id/tvStatus"
                style="@style/TransactionRowValue"
                android:text="Success" />
        </TableRow>

        <TableRow
            android:id="@+id/actionRow"
            android:layout_marginStart="15dp"
            android:layout_marginTop="14dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnRefund"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginEnd="15dp"
                android:layout_weight=".5"
                android:background="@drawable/btn_theme_orange"
                android:text="@string/lbl_refund"
                android:textAllCaps="false"
                android:textColor="@color/bt_white"
                android:visibility="gone"
                tools:visibility="visible" />

            <Button
                android:id="@+id/btnReciept"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginEnd="15dp"
                android:layout_weight=".5"
                android:background="@drawable/btn_theme_blue"
                android:text="@string/lbl_receipt"
                android:textAllCaps="false"
                android:textColor="@color/bt_white"
                android:visibility="gone"
                tools:visibility="visible" />


            <Button
                android:id="@+id/btnProcessPayment"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/btn_theme_green"
                android:text="@string/lbl_process_payment"
                android:textAllCaps="false"
                android:textColor="@color/bt_white"
                android:visibility="gone"
                tools:visibility="visible" />
        </TableRow>


    </TableLayout>
</androidx.cardview.widget.CardView>