<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.thealer.telehealer.views.home.orders.OrdersCustomView
        android:id="@+id/patient_ocv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:arrow_visible="true"
        app:layout_constraintTop_toTopOf="parent"
        app:sub_title_visible="false"
        app:title_text="@string/Click_here_to_select_patient"
        app:view_label="@string/patient_name" />

    <LinearLayout
        android:id="@+id/forms_ll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/send_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_ocv">

        <TextView
            style="@style/text_app_color"
            android:text="@string/form" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/forms_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Button
        android:id="@+id/send_btn"
        style="@style/button_app_background_white_text"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>