<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:gravity="center"
            android:hint="@string/please_select_your_option" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrey" />

        <TextView
            android:id="@+id/camera_tv"
            style="@style/text_app_color"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:text="@string/camera" />

        <TextView
            android:id="@+id/gallery_tv"
            style="@style/text_app_color"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:text="@string/gallery" />

</LinearLayout>